App - Allowing time shift on multiple games
